# ORTCustomOpLibrary

./: CMakeLists.txt  LICENSE  README.md  build.py
artifacts/: README.md
custom_op_library/: custom_op_library_cpu.cc  custom_op_library_fp16.cc  custom_op_library_fp32.cc  sequence_pooling.cc  sequence_pooling.cu  sequence_pooling.h
